tests/should_fail/logic_alias/prog_and_alias_in_different_traits.stderr
error: A trait method can only be aliased by a logic method from the same trait. (program method defined in trait T2, logic alias defined in trait T1)
  --> prog_and_alias_in_different_traits.rs:17:5
   |
17 |     #[logic_alias(Self::foo_log)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> prog_and_alias_in_different_traits.rs:18:5
   |
18 |     fn foo_prog(self) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> prog_and_alias_in_different_traits.rs:10:5
   |
10 |     fn foo_log(self) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

